[package]
name = "hash_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32"
sha2 = "0.10"
ndarray = "0.15"
ndarray-rand = "0.14.0"
image = "0.24.5"
nshare = "0.9.0"
imageproc = "0.23.0"
