[package]
name = "hash_test"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Niederberger <thomas@niederb.ch>"]
license = "MIT"
description = "A tool to create art with hash algorithms"
readme = "README.md"
homepage = "https://github.com/niederb/hash_art"
repository = "https://github.com/niederb/hash_art"
keywords = ["hashing", "hash", "art", "cryptography"]
categories = ["command-line-utilities"]

[dependencies]
nalgebra = "0.32"
sha2 = "0.10"
ndarray = "0.15"
ndarray-rand = "0.14.0"
image = "0.24.5"
nshare = "0.9.0"
imageproc = "0.23.0"
clap = { version = "4.3.1", features = ["derive"] }
wgpu = "0.16.1"
bytemuck = "1.13.1"
env_logger = "0.10.0"
pollster = "0.3.0"
futures-intrusive = "0.5.0"
